--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
+body {
+  box-sizing: border-box;
+}
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -7,6 +16,66 @@
 
 .nav-bar {
   display: flex;
-  color: red;
-  gap: 16px;
+  gap: 48px;
+  margin:0 auto;
+  background: lightgreen;
+  justify-content: center;
+  padding: 16px;
+  border-radius: 32px;
+  min-width: 100%;
+}
+
+.title{
+  margin: 32px 0;
+}
+
+.all-players-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: center;
+}
+
+.player-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  width: 25%;
+  padding: 32px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.player-card img {
+  width: 150px;
+  height: 150px;
+  border-radius:100%;
+  object-fit: cover;
+  margin-bottom: 16px;
+}
+
+.AddPlayer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 32px 0;
+}
+
+.AddPlayer form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.AddPlayer input[type="submit"] {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 32px;
+  background: lightgreen;
+  cursor: pointer;
+  font-weight: 600;
 }
