--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 8px;
-  width: 25%;
+  min-width: 25%;
   padding: 32px;
   border: 1px solid #ccc;
   border-radius: 8px;
